// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`end to end tests > getApiCapabilities 1`] = `
{
  "api": {
    "area": {
      "maximum": 0.25,
    },
    "changesets": {
      "default_query_limit": 100,
      "maximum_elements": 10000,
      "maximum_query_limit": 100,
    },
    "note_area": {
      "maximum": 25,
    },
    "notes": {
      "default_query_limit": 100,
      "maximum_query_limit": 10000,
    },
    "relationmembers": {
      "maximum": 32000,
    },
    "status": {
      "api": "online",
      "database": "online",
      "gpx": "online",
    },
    "timeout": {
      "seconds": 300,
    },
    "tracepoints": {
      "per_page": 5000,
    },
    "version": {
      "maximum": "0.6",
      "minimum": "0.6",
    },
    "waynodes": {
      "maximum": 2000,
    },
  },
  "attribution": "http://www.openstreetmap.org/copyright",
  "copyright": "OpenStreetMap and contributors",
  "generator": "OpenStreetMap server",
  "license": "http://opendatacommons.org/licenses/odbl/1-0/",
  "policy": {
    "imagery": {
      "blacklist": [],
    },
  },
  "version": "0.6",
}
`;

exports[`end to end tests > getCapabilities 1`] = `
{
  "limits": {
    "maxArea": 0.25,
    "maxChangesetElements": 10000,
    "maxNoteArea": 25,
    "maxTimeout": 300,
    "maxTracepointPerPage": 5000,
    "maxWayNodes": 2000,
  },
  "policy": {
    "imageryBlacklist": [],
  },
}
`;

exports[`end to end tests > getChangeset (no discussion) 1`] = `
{
  "changes_count": 10,
  "closed_at": 2021-12-16T09:29:15.000Z,
  "comments_count": 2,
  "created_at": 2021-12-16T09:29:14.000Z,
  "discussion": undefined,
  "id": 227200,
  "max_lat": -36.8801278,
  "max_lon": 174.7400986,
  "min_lat": -36.8809762,
  "min_lon": 174.739496,
  "open": false,
  "tags": {
    "changesets_count": "2",
    "comment": "create node, way, and relation. modify way",
    "created_by": "iD 2.20.2",
    "host": "https://master.apis.dev.openstreetmap.org/edit",
    "imagery_used": "LINZ NZ Aerial Imagery",
    "locale": "en-NZ",
    "warnings:disconnected_way:highway": "1",
  },
  "uid": 12248,
  "user": "kylenz_testing",
}
`;

exports[`end to end tests > getChangeset (with discussion) 1`] = `
{
  "changes_count": 10,
  "closed_at": 2021-12-16T09:29:15.000Z,
  "comments_count": 2,
  "created_at": 2021-12-16T09:29:14.000Z,
  "discussion": [
    {
      "date": 2024-06-30T08:59:15.000Z,
      "text": "­",
      "uid": "12248",
      "user": "kylenz_testing",
    },
    {
      "date": 2024-06-30T08:59:55.000Z,
      "text": "sup bro",
      "uid": "12248",
      "user": "kylenz_testing",
    },
  ],
  "id": 227200,
  "max_lat": -36.8801278,
  "max_lon": 174.7400986,
  "min_lat": -36.8809762,
  "min_lon": 174.739496,
  "open": false,
  "tags": {
    "changesets_count": "2",
    "comment": "create node, way, and relation. modify way",
    "created_by": "iD 2.20.2",
    "host": "https://master.apis.dev.openstreetmap.org/edit",
    "imagery_used": "LINZ NZ Aerial Imagery",
    "locale": "en-NZ",
    "warnings:disconnected_way:highway": "1",
  },
  "uid": 12248,
  "user": "kylenz_testing",
}
`;

exports[`end to end tests > getChangesetDiff 1`] = `
{
  "create": [
    {
      "changeset": 227200,
      "id": 4330788673,
      "lat": -36.8804242,
      "lon": 174.7398822,
      "tags": {
        "bus": "yes",
        "highway": "bus_stop",
        "network": "AT",
        "network:wikidata": "Q4819567",
        "network:wikipedia": "en:Auckland Transport",
        "public_transport": "platform",
      },
      "timestamp": "2021-12-16T09:29:15Z",
      "type": "node",
      "uid": 12248,
      "user": "kylenz_testing",
      "version": 1,
    },
    {
      "changeset": 227200,
      "id": 4330788674,
      "lat": -36.8809317,
      "lon": 174.7397472,
      "tags": undefined,
      "timestamp": "2021-12-16T09:29:15Z",
      "type": "node",
      "uid": 12248,
      "user": "kylenz_testing",
      "version": 1,
    },
    {
      "changeset": 227200,
      "id": 4330788675,
      "lat": -36.8801611,
      "lon": 174.7399983,
      "tags": undefined,
      "timestamp": "2021-12-16T09:29:15Z",
      "type": "node",
      "uid": 12248,
      "user": "kylenz_testing",
      "version": 1,
    },
    {
      "changeset": 227200,
      "id": 4330788676,
      "lat": -36.8809762,
      "lon": 174.7397789,
      "tags": undefined,
      "timestamp": "2021-12-16T09:29:15Z",
      "type": "node",
      "uid": 12248,
      "user": "kylenz_testing",
      "version": 1,
    },
    {
      "changeset": 227200,
      "id": 4330788677,
      "lat": -36.8809526,
      "lon": 174.7398473,
      "tags": undefined,
      "timestamp": "2021-12-16T09:29:15Z",
      "type": "node",
      "uid": 12248,
      "user": "kylenz_testing",
      "version": 1,
    },
    {
      "changeset": 227200,
      "id": 4330788678,
      "lat": -36.8801278,
      "lon": 174.7400692,
      "tags": undefined,
      "timestamp": "2021-12-16T09:29:15Z",
      "type": "node",
      "uid": 12248,
      "user": "kylenz_testing",
      "version": 1,
    },
    {
      "changeset": 227200,
      "id": 4330788679,
      "lat": -36.880182,
      "lon": 174.7400986,
      "tags": undefined,
      "timestamp": "2021-12-16T09:29:15Z",
      "type": "node",
      "uid": 12248,
      "user": "kylenz_testing",
      "version": 1,
    },
    {
      "changeset": 227200,
      "id": 4305800031,
      "nodes": [
        4330788675,
        4330788678,
        4330788679,
        4330788677,
        4330788676,
        4330788674,
        4330788675,
      ],
      "tags": {
        "access": "no",
        "bus": "designated",
        "highway": "bus_guideway",
        "name": "The Loop",
        "oneway": "yes",
      },
      "timestamp": "2021-12-16T09:29:15Z",
      "type": "way",
      "uid": 12248,
      "user": "kylenz_testing",
      "version": 1,
    },
    {
      "changeset": 227200,
      "id": 4304961500,
      "members": [
        {
          "ref": 4305800031,
          "role": "",
          "type": "way",
        },
      ],
      "tags": {
        "name": "NX3",
        "network": "AT",
        "network:wikidata": "Q4819567",
        "network:wikipedia": "en:Auckland Transport",
        "route": "bus",
        "type": "route",
      },
      "timestamp": "2021-12-16T09:29:15Z",
      "type": "relation",
      "uid": 12248,
      "user": "kylenz_testing",
      "version": 1,
    },
  ],
  "delete": [],
  "modify": [
    {
      "changeset": 227200,
      "id": 4305800016,
      "nodes": [
        4330788634,
        4330788635,
        4330788636,
        4330788637,
        4330788634,
      ],
      "tags": {
        "building": "yes",
        "building:levels": "1",
        "roof:colour": "grey",
      },
      "timestamp": "2021-12-16T09:29:15Z",
      "type": "way",
      "uid": 12248,
      "user": "kylenz_testing",
      "version": 2,
    },
  ],
}
`;

exports[`end to end tests > getFeature full=false 1`] = `
[
  {
    "changeset": 243638,
    "id": 4305800016,
    "nodes": [
      4332338515,
      4332338516,
      4332338517,
      4332338518,
      4332338515,
    ],
    "tags": {
      "building": "house",
      "name:fr": "chez moi",
    },
    "timestamp": "2022-09-10T11:47:13Z",
    "type": "way",
    "uid": 12248,
    "user": "kylenz_testing",
    "version": 4,
  },
]
`;

exports[`end to end tests > getFeature full=true 1`] = `
[
  {
    "changeset": 243637,
    "id": 4332338515,
    "lat": -36.8806247,
    "lon": 174.7397153,
    "timestamp": "2022-09-10T11:30:13Z",
    "type": "node",
    "uid": 12248,
    "user": "kylenz_testing",
    "version": 1,
  },
  {
    "changeset": 243637,
    "id": 4332338516,
    "lat": -36.8805369,
    "lon": 174.739748,
    "timestamp": "2022-09-10T11:30:13Z",
    "type": "node",
    "uid": 12248,
    "user": "kylenz_testing",
    "version": 1,
  },
  {
    "changeset": 243637,
    "id": 4332338517,
    "lat": -36.8804862,
    "lon": 174.7395354,
    "timestamp": "2022-09-10T11:30:13Z",
    "type": "node",
    "uid": 12248,
    "user": "kylenz_testing",
    "version": 1,
  },
  {
    "changeset": 243637,
    "id": 4332338518,
    "lat": -36.8805741,
    "lon": 174.7395027,
    "timestamp": "2022-09-10T11:30:13Z",
    "type": "node",
    "uid": 12248,
    "user": "kylenz_testing",
    "version": 1,
  },
  {
    "changeset": 243638,
    "id": 4305800016,
    "nodes": [
      4332338515,
      4332338516,
      4332338517,
      4332338518,
      4332338515,
    ],
    "tags": {
      "building": "house",
      "name:fr": "chez moi",
    },
    "timestamp": "2022-09-10T11:47:13Z",
    "type": "way",
    "uid": 12248,
    "user": "kylenz_testing",
    "version": 4,
  },
]
`;

exports[`end to end tests > getNotesForQuery 1`] = `
[
  {
    "close_url": "https://master.apis.dev.openstreetmap.org/api/0.6/notes/55251/close.json",
    "comment_url": "https://master.apis.dev.openstreetmap.org/api/0.6/notes/55251/comment.json",
    "comments": [
      {
        "action": "opened",
        "date": "2024-01-24 06:33:43 UTC",
        "html": "<p>cycleway=no</p>",
        "text": "cycleway=no",
        "uid": 12248,
        "user": "kylenz_testing",
        "user_url": "https://master.apis.dev.openstreetmap.org/user/kylenz_testing",
      },
    ],
    "date_created": "2024-01-24 06:33:43 UTC",
    "id": 55251,
    "location": {
      "lat": -36.8300694,
      "lng": 174.7460568,
    },
    "status": "open",
    "url": "https://master.apis.dev.openstreetmap.org/api/0.6/notes/55251.json",
  },
]
`;

exports[`end to end tests > getPermissions 1`] = `
{
  "attribution": "http://www.openstreetmap.org/copyright",
  "copyright": "OpenStreetMap and contributors",
  "generator": "OpenStreetMap server",
  "license": "http://opendatacommons.org/licenses/odbl/1-0/",
  "permissions": [],
  "version": "0.6",
}
`;

exports[`end to end tests > getUser 1`] = `
{
  "account_created": 2021-12-15T09:49:18.000Z,
  "blocks": {
    "received": {
      "active": 0,
      "count": 0,
    },
  },
  "changesets": {
    "count": 15,
  },
  "contributor_terms": {
    "agreed": true,
  },
  "description": "",
  "display_name": "kylenz_testing",
  "id": 12248,
  "roles": [],
  "traces": {
    "count": 0,
  },
}
`;

exports[`end to end tests > listChangesets 1`] = `
[
  {
    "changes_count": 2,
    "closed_at": 2022-09-10T11:47:14.000Z,
    "comments_count": 0,
    "created_at": 2022-09-10T11:47:13.000Z,
    "discussion": undefined,
    "id": 243638,
    "max_lat": -36.8804862,
    "max_lon": 174.739748,
    "min_lat": -36.8806247,
    "min_lon": 174.7395027,
    "open": false,
    "tags": {
      "comment": "Restore deleted features",
      "created_by": "OSM History Restorer",
      "host": "http://127.0.0.1:3000/#/restore-history",
    },
    "uid": 12248,
    "user": "kylenz_testing",
  },
  {
    "changes_count": 10,
    "closed_at": 2022-09-10T11:30:13.000Z,
    "comments_count": 0,
    "created_at": 2022-09-10T11:30:12.000Z,
    "discussion": undefined,
    "id": 243637,
    "max_lat": -36.8804809,
    "max_lon": 174.7397571,
    "min_lat": -36.880627,
    "min_lon": 174.739496,
    "open": false,
    "tags": {
      "changesets_count": "5",
      "comment": "delete and redraw building",
      "created_by": "iD 2.21.1",
      "host": "https://master.apis.dev.openstreetmap.org/edit",
      "imagery_used": "LINZ NZ Aerial Imagery",
      "locale": "en-NZ",
    },
    "uid": 12248,
    "user": "kylenz_testing",
  },
  {
    "changes_count": 10,
    "closed_at": 2021-12-16T09:29:15.000Z,
    "comments_count": 2,
    "created_at": 2021-12-16T09:29:14.000Z,
    "discussion": undefined,
    "id": 227200,
    "max_lat": -36.8801278,
    "max_lon": 174.7400986,
    "min_lat": -36.8809762,
    "min_lon": 174.739496,
    "open": false,
    "tags": {
      "changesets_count": "2",
      "comment": "create node, way, and relation. modify way",
      "created_by": "iD 2.20.2",
      "host": "https://master.apis.dev.openstreetmap.org/edit",
      "imagery_used": "LINZ NZ Aerial Imagery",
      "locale": "en-NZ",
      "warnings:disconnected_way:highway": "1",
    },
    "uid": 12248,
    "user": "kylenz_testing",
  },
  {
    "changes_count": 5,
    "closed_at": 2021-12-16T08:43:07.000Z,
    "comments_count": 0,
    "created_at": 2021-12-16T08:43:06.000Z,
    "discussion": undefined,
    "id": 227184,
    "max_lat": -36.8804809,
    "max_lon": 174.7397571,
    "min_lat": -36.880627,
    "min_lon": 174.739496,
    "open": false,
    "tags": {
      "changesets_count": "1",
      "comment": "add building in dev environment",
      "created_by": "iD 2.20.2",
      "host": "https://master.apis.dev.openstreetmap.org/edit",
      "imagery_used": "LINZ NZ Aerial Imagery",
      "locale": "en-NZ",
    },
    "uid": 12248,
    "user": "kylenz_testing",
  },
]
`;
